<resources>
    <string name="app_name">FoodShop</string>
    <string name="welcome_message"> Welcome to YellowBranch Shop</string>
    <string name="welcome"> Greetings</string>
    <string name="Main_Description">Shared and delightful, for an easy and enjoyable food ordering experience</string>
    <string name="LoginNav">Log In</string>
    <string name="SignUpNav">Sign Up</string>
    <string name="Title">Yellow</string>
    <string name="Title2">Branch</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Member">You are member? Login</string>
    <string name="Member2">Doesnt Have Account? SignUp</string>
    <string name="TodayF">Today Popular Food</string>
    <string name="ViewAll">VIEW ALL</string>
    <string name="Cats">Choose Category</string>
    <string name="SearchBar">Search</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="time">time</string>
    <string name="price">$</string>
    <string name="price_placeholder">$ %s</string>
    <string name="Description">Details</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae dui tristique, interdum odio ac, imperdiet sem. Curabitur volutpat velit vitae erat tempor, eget sollicitudin sem dignissim. Etiam sed mauris eu tellus tristique blandit. Vestibulum imperdiet, mi in sodales sagittis, turpis orci condimentum dui, id lacinia libero nisi id arcu. Mauris imperdiet dui ac interdum porta</string>
    <string name="Quantity">Quantity</string>
    <string name="Numb">0</string>
    <string name="Add2cart">Add To Cart</string>
    <string name="cartTitle">Cart</string>
    <string name="Total">Total Price</string>
    <string name="CouponH">Enter Your Coupon</string>
    <string name="CouponBtn">Apply Coupon</string>
    <string name="Order">Order Summary</string>
    <string name="Sub">Subtotal</string>
    <string name="Deli">Delivery</string>
    <string name="Tax">Tax</string>
    <string name="FOrder">Place Order</string>
</resources>